# python-ci-demo

./: CI流水线  README.md  aaaaa  pyproject.toml  requirements.txt  sonar-project.properties  测试
.github/workflows/: ci.yml
src/: app.py
tests/: test_app.py
